portfolio logo changed and spelling corrections done

--- a/index.html
+++ b/index.html
@@ -359,14 +359,14 @@
 					<div class="feature_item" style="height: 350px">
 						<i class="fa fa-database"></i>
 						<h4>Database Design</h4>
-						<p>For good project must be needs good Database model. Which is design by UML Diagram.</p>
+						<p>For good project must be needs good Database model. Which is designed by UML Diagram.</p>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="feature_item" style="height: 350px">
 						<i class="fa fa-desktop"></i>
 						<h4>Web Application</h4>
-						<p>Like Management system service is provide.</p>
+						<p>Like Management system service is provided.</p>
 					</div>
 				</div>
 			</div>
