site url changed

--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://flamboyant-mcnulty-7f6b6c.netlify.app/">
-								<h4>Burger Building App</h4>
+							<a href="https://flamboyant-mcnulty-7f6b6c.netlify.app/" target="_blank">
+								<h4>Make your own Burger</h4>
 							</a>
 							<p>Own Project</p>
 						</div>
