--- a/portfolio.html
+++ b/portfolio.html
@@ -106,14 +106,14 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://flamboyant-mcnulty-7f6b6c.netlify.app/">
-								<h4>Burger Building App</h4>
+							<a href="https://flamboyant-mcnulty-7f6b6c.netlify.app/" target="_blank">
+								<h4>Make your own Burger</h4>
 							</a>
 							<p>Own Project</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6 brand print">
+				<div class=" col-lg-4 col-md-4 col-sm-6 brand print">
 					<div class="h_gallery_item">
 						<div class="g_img_item">
 							<img class="img-fluid" src="img/gallery/Capture-1.PNG" alt="">
