site url changed

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://flamboyant-mcnulty-7f6b6c.netlify.app/" target="_blank">
+							<a href="https://makeyourownburger.netlify.app/" target="_blank">
 								<h4>Make your own Burger</h4>
 							</a>
 							<p>Own Project</p>
@@ -419,7 +419,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://nostalgic-noyce-9c5860.netlify.app/">
+							<a href="https://coronaupdater.netlify.app/" target="_blank">
 								<h4>Corona updater</h4>
 							</a>
 							<p>Own Project</p>
@@ -434,7 +434,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://inspiring-tereshkova-1c0c7b.netlify.app/">
+							<a href="https://expensetracer.netlify.app/" target="_blank">
 								<h4>Expense Tracker</h4>
 							</a>
 							<p>Own Project</p>
@@ -449,7 +449,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://eager-heisenberg-b8c9a4.netlify.app/">
+							<a href="https://eager-heisenberg-b8c9a4.netlify.app/" target="_blank">
 								<h4>Food reviewer</h4>
 							</a>
 							<p>University Project</p>
@@ -465,7 +465,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://jolly-shannon-af4639.netlify.app/">
+							<a href="https://jolly-shannon-af4639.netlify.app/" target="_blank">
 								<h4>Tribute Page For our chairman sir</h4>
 							</a>
 							<p>University Project</p>
@@ -481,7 +481,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://serene-varahamihira-319d6a.netlify.app/shop">
+							<a href="https://serene-varahamihira-319d6a.netlify.app/shop" target="_blank">
 								<h4>Online Management Service(E-COMMERCE)</h4>
 							</a>
 							<p>Client Project</p>
@@ -497,7 +497,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://boring-villani-d0ff04.netlify.app/market-place/home">
+							<a href="https://boring-villani-d0ff04.netlify.app/market-place/home" target="_blank">
 								<h4>PACHPAI AN E-COMMERCE APP</h4>
 							</a>
 							<p>Client Project</p>
@@ -513,7 +513,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://www.instagram.com/momentstag/">
+							<a href="https://www.instagram.com/momentstag/" target="_blank">
 								<h4>Photography</h4>
 							</a>
 							<p>Hobby</p>
@@ -528,7 +528,8 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://www.coursera.org/account/accomplishments/certificate/6KRAYC8MLF72">
+							<a href="https://www.coursera.org/account/accomplishments/certificate/6KRAYC8MLF72"
+								target="_blank">
 								<h4>Interactivity with JavaScript</h4>
 							</a>
 							<p>Licenses & certifications</p>
