--- a/portfolio.html
+++ b/portfolio.html
@@ -121,7 +121,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://nostalgic-noyce-9c5860.netlify.app/">
+							<a href="https://coronaupdater.netlify.app/" target="_blank">
 								<h4>Corona updater</h4>
 							</a>
 							<p>Own Project</p>
@@ -136,7 +136,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://inspiring-tereshkova-1c0c7b.netlify.app/">
+							<a href="https://expensetracer.netlify.app/" target="_blank">
 								<h4>Expense Tracker</h4>
 							</a>
 							<p>Own Project</p>
@@ -151,7 +151,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://eager-heisenberg-b8c9a4.netlify.app/">
+							<a href="https://eager-heisenberg-b8c9a4.netlify.app/" target="_blank">
 								<h4>Food reviewer</h4>
 							</a>
 							<p>University Project</p>
@@ -167,7 +167,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://jolly-shannon-af4639.netlify.app/">
+							<a href="https://jolly-shannon-af4639.netlify.app/" target="_blank">
 								<h4>Tribute Page For our chairman sir</h4>
 							</a>
 							<p>University Project</p>
@@ -183,7 +183,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://serene-varahamihira-319d6a.netlify.app/shop">
+							<a href="https://serene-varahamihira-319d6a.netlify.app/shop" target="_blank">
 								<h4>Online Management Service(E-COMMERCE)</h4>
 							</a>
 							<p>Client Project</p>
@@ -199,7 +199,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://boring-villani-d0ff04.netlify.app/market-place/home">
+							<a href="https://boring-villani-d0ff04.netlify.app/market-place/home" target="_blank">
 								<h4>PACHPAI AN E-COMMERCE APP</h4>
 							</a>
 							<p>Client Project</p>
@@ -215,7 +215,7 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://www.instagram.com/momentstag/">
+							<a href="https://www.instagram.com/momentstag/" target="_blank">
 								<h4>Photography</h4>
 							</a>
 							<p>Hobby</p>
@@ -230,7 +230,8 @@
 									alt=""></a>
 						</div>
 						<div class="g_item_text">
-							<a href="https://www.coursera.org/account/accomplishments/certificate/6KRAYC8MLF72">
+							<a href="https://www.coursera.org/account/accomplishments/certificate/6KRAYC8MLF72"
+								target="_blank">
 								<h4>Interactivity with JavaScript</h4>
 							</a>
 							<p>Licenses & certifications</p>
