--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 	<!--================Home Banner Area =================-->
 	<section class="home_banner_area">
 		<div class="container box_1620">
-			<div class="banner_inner d-flex align-items-center">
+			<div class="banner_inner d-flex align-items-center" style="clip-path: polygon(7% 0, 100% 0, 100% 49%, 100% 100%, 6% 100%, 0 25%);">
 				<div class="banner_content">
 					<div class="media">
-						<div class="d-flex">
-							<img src="img/personal.jpg" alt="not found">
+						<div class="d-flex" >
+							<img src="img/personal.PNG" alt="not found" style="clip-path: polygon(0% 0%, 86% 0, 100% 20%, 85% 99%, 0% 100%);  ">
 						</div>
 						<div class="media-body">
 							<div class="personal_text">
