--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
 								<span></span>
 								<div class="media">
 									<div class="d-flex">
-										<p>January 2018 to present</p>
+										<p>Jan 2019  to present</p>
 									</div>
 									<div class="media-body">
 										<h4>Web App</h4>
-										<p>Full Stack developer . <br />Awesome Library With HTML, Bootstrap, CSS $
+										<p>Full Stack developer at <br />Awesome Library With HTML, Bootstrap, CSS $
 											JavaScript.
 										</p>
 									</div>
@@ -250,47 +250,25 @@
 								<span></span>
 								<div class="media">
 									<div class="d-flex">
-										<p>January 2019 to present</p>
+										<p>Feb 2019 to Jan 2020</p>
 									</div>
 									<div class="media-body">
-										<h4>Front-End </h4>
-										<p>Web Developer . <br />Super Cool Web with React Js, HTML, CSS.</p>
+										<h4>Mave Team</h4>
+										<p>Web Developer at <br />Mave Team, team work.</p>
 									</div>
 								</div>
 							</li>
+							
+							
 							<li>
 								<span></span>
 								<div class="media">
 									<div class="d-flex">
-										<p>January 2019 to present</p>
-									</div>
-									<div class="media-body">
-										<h4>Back-End </h4>
-										<p>Web Developer . <br />Great API with Node Js.</p>
-									</div>
-								</div>
-							</li>
-							<li>
-								<span></span>
-								<div class="media">
-									<div class="d-flex">
-										<p>January 2019 to present</p>
-									</div>
-									<div class="media-body">
-										<h4>Team Work</h4>
-										<p>Web Developer . <br />Mave Team, Personal.</p>
-									</div>
-								</div>
-							</li>
-							<li>
-								<span></span>
-								<div class="media">
-									<div class="d-flex">
-										<p>February 2020 to May 2020</p>
+										<p>Feb 2020 to May 2020</p>
 									</div>
 									<div class="media-body">
 										<h4>Internship</h4>
-										<p>Jr. Web Developer . <br />Nano Information Technology (Nanosoft).</p>
+										<p>Jr. Web Developer at <br />Nano Information Technology (Nanosoft).</p>
 									</div>
 								</div>
 							</li>
@@ -298,11 +276,23 @@
 								<span></span>
 								<div class="media">
 									<div class="d-flex">
-										<p>June 2020 to Auguest 2020</p>
+										<p>June 2020 to Aug 2020</p>
 									</div>
 									<div class="media-body">
 										<h4>Employee</h4>
-										<p>Jr. Web Developer . <br />Nano Information Technology (Nanosoft).</p>
+										<p>Jr. Web Developer at <br />Nano Information Technology (Nanosoft).</p>
+									</div>
+								</div>
+							</li>
+							<li>
+								<span></span>
+								<div class="media">
+									<div class="d-flex">
+										<p>Jan 2021 to Present</p>
+									</div>
+									<div class="media-body">
+										<h4>Employee</h4>
+										<p>Software Engineer at<br />eCarnivalBD Limited.</p>
 									</div>
 								</div>
 							</li>
@@ -314,7 +304,7 @@
 								<span></span>
 								<div class="media">
 									<div class="d-flex">
-										<p>January 2017 to present</p>
+										<p>January 2017 to March 2021</p>
 									</div>
 									<div class="media-body">
 										<h4>Undergraduate Degree</h4>
